# statediff-RECUP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  ci.yml  requirements.txt  setup.py  spack.yaml
.github/workflows/: ci.yml  ci.yml.old
builds/statediff/: spack.yaml
python/: CMakeLists.txt  __init__.py  bindings.cpp
scripts/: build.sh  setup_env.sh  setup_spack.sh
spack-repo/: repo.yaml
tests/statediff/: CMakeLists.txt  test.cpp  test.sh
tests/statediff-python/: test.py
